<resources>
    <string name="app_name">HollaNow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Get Started</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_phone_verification"> </string>
    <string name="slide_one_title">Know Your Closeby Friends</string>
    <string name="slide_one_description">Need a friend\'s presence? Know which of them are around to
        call.
    </string>
    <string name="slide_two_title">Help Is Nearby</string>
    <string name="slide_two_description">Every phone number you need to call for your urgent need
        are on contact list, Just search.
    </string>
    <string name="slide_three_title">Be Available To Your Customers</string>
    <string name="slide_three_description">Put your contact detail on the contact list of nearby
        people who needs to reach you for your services.
    </string>
    <string name="slide_four_title">Never Lose Contacts</string>
    <string name="slide_four_description">You never have to lose important contacts anymore when you
        lose your mobile phone.
    </string>
    <string name="title_activity_home">HollaNow</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_finish">Finish</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_contact_detail">Contact Detail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_notification">Notification</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_category">Category</string>
    <string name="note_description">Add a short note to go with this phone call. (Exclusive to HollaNow Users)</string>
    <string name="share_facebook">Inform your prospects</string>
    <string name="title_activity_call_note">Call Note</string>
    <string name="search_query_hint">Search phone numbers, names, and businesses</string>
    <string name="action_location">Search By Location</string>
    <string name="sign_up_email">Sign up with email</string>
    <string name="facebook_app_id">1726216680966670</string>
    <string name="login_with_email">Login with email</string>
    <string name="pro_share_description">Allow users reach you for the services you offer by adding
        your occupation and work address. \n Share to use HollaNow PRO
    </string>
    <string name="sign_up_for_a_new_account">Sign up for a new account</string>
    <string name="default_callnote">Let\'s talk</string>
    <string name="action_invite_friends">Invite Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about">version 1.12 \n &#169; 2016-2017. HollaNow</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_summary_location">Turn On/Off</string>
    <string name="pref_title_privacy">Visibile In Search</string>
    <string name="pref_summary_privacy">Hide or display your contact when others search for you.
    </string>
    <string name="title_activity_nearby_search">Search Nearby</string>
    <string name="pref_location_key">pref_location</string>
    <string name="pref_privacy_key">pref_privacy</string>
    <string name="pref_backup_contacts_key">pref_backup_contacts</string>
    <string name="pref_sync_contacts_key">pref_sync_contacts</string>
    <string name="pref_delete_contacts_key">pref_delete_account</string>
    <string name="tooltip_two">You can find your friends contacts by searching for their usernames on HollaNow</string>
    <string name="tooltip_three">HollaNow call-notes are exclusive to HollaNow users. They allow you send a short note with your phone call. Invite friends to enjoy</string>
    <string name="tooltip_one">Invite close friends to HollaNow to know their location when you need them</string>
</resources>