<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.doxa360.android.betacaller.HomeActivity">

      <!--<item android:id="@+id/action_search"-->
            <!--android:orderInCategory="100"-->
            <!--android:title="@string/action_search"-->
            <!--android:icon="@drawable/ic_search_white_24dp"-->
            <!--app:showAsAction="always"/>-->


    <item android:id="@+id/action_refresh"
          android:orderInCategory="100"
          android:title="@string/action_notification"
          android:icon="@drawable/ic_action_refresh"
          android:visible="false"
          app:showAsAction="always"/>

    <item android:id="@+id/action_notification"
          android:orderInCategory="100"
          android:title="@string/action_notification"
          app:actionLayout="@layout/notification_layout"
          app:showAsAction="always"/>



    <item android:id="@+id/action_profile"
            android:orderInCategory="100"
            android:title="@string/action_profile"
            android:icon="@drawable/ic_account_circle_white_24dp"
            app:showAsAction="always"/>

      <item android:id="@+id/action_invite"
            android:orderInCategory="100"
            android:title="@string/action_invite_friends"
            android:icon="@drawable/com_facebook_button_icon"
            app:icon="@drawable/com_facebook_button_icon"
            app:showAsAction="never"/>

      <item android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
          android:orderInCategory="100"
          android:title="@string/action_logout"
          app:showAsAction="never"/>

</menu>

